# PINNs-for-NVS-fluid

./: .gitignore  pyproject.toml  readme.md  setup.py  test.ipynb
examples/: TEST_backward_copy.ipynb  TEST_channel_new_flow.ipynb  TEST_cylinder_copy copy.ipynb  channel_new_flow.ipynb  staedy_channel_flow.ipynb  test.ipynb
examples/BFS_parabolic/: BFS_steady.ipynb
examples/channel_flow_stead_parabolic/: channel_flow_stead_parabolic.ipynb
examples/channel_flow_steady/: channel_flow_steady.ipynb
examples/cylinder_flow_steady/: cylinder_flow_steady.ipynb
examples_new/cylinder_flow_steady/: cylinder_flow_steady.ipynb  model2.pkl  outlet_velocity_profile.txt
experiment/: benchmark.ipynb  deepxde_test  model.pkl  test RAR circle copy.ipynb  test RAR circle.ipynb  test RAR.ipynb
src/: Network.py  Physics.py  PointSampling.py  TEST_channel_flow.ipynb  Utility.py  channel_flow_steady.ipynb  example.ipynb  func_test.ipynb  visualize.py
src/PINNs/: Geometry.py  Network.py  PINNmethod.py  Physics.py  PhysicsGeometry.py  PhysicsInformedAttach.py  PointSampling.py  Visualize.py  __init__.py
src/PINNs.egg-info/: PKG-INFO  SOURCES.txt
